# DAOLLM

./: .gitignore  ADVANCED_FEATURES_STATUS.md  Anchor.toml  DAO_PROPOSAL_SYSTEM_DECENTRALIZED_AI.md  IMPLEMENTATION_PLAN.md  MVP_STATUS.md  README.md  SOLANA_MANUAL_INSTALL.md  TRO_IMPLEMENTATION_SUMMARY.md  WINDOWS_INSTALL_GUIDE.md  env.example  package-lock.json  package.json  tsconfig.json
backend/: Cargo.toml  requirements.txt
backend/config/: settings.py
backend/src/: config.rs  main.rs  models.rs
backend/src/handlers/: governance.rs  inference.rs  mod.rs  proposals.rs  quality.rs  rewards.rs  training.rs
backend/src/routes/: governance.rs  inference.rs  mod.rs  proposals.rs  quality.rs  rewards.rs  training.rs
backend/src/services/: governance_service.rs  inference_service.rs  ipfs_service.rs  knowledge_graph_service.rs  mod.rs  prompt_optimizer.rs  quality_service.rs  reasoning_service.rs  reward_service.rs  semantic_cache_service.rs  solana_service.rs  training_service.rs  verification_service.rs  zk_proof_service.rs
backend/tests/: integration_test.rs  tro_benchmark.rs
config/: economy-params.json
docs/: MVP_STATUS.md  UPGRADE_TO_ANCHOR_0.32.md  USER_GUIDE.md
frontend/: package.json  tailwind.config.js
frontend/src/components/: NodeStatus.tsx  ProposalCard.tsx
frontend/src/hooks/: useSolana.ts
frontend/src/pages/: _app.tsx  challenge.tsx  governance.tsx  index.tsx  node-register.tsx  nodes.tsx  proposals.tsx  rewards.tsx  submit.tsx  task-monitor.tsx  tro-tasks.tsx
frontend/src/types/: global.d.ts
frontend/src/utils/: solana.ts
programs/daollm/: Cargo.toml
programs/daollm/src/: lib.rs
programs/daollm/src/instructions/: data_contribution.rs  governance.rs  inference_network.rs  mod.rs  rewards.rs  training.rs  tro.rs
programs/daollm/src/state/: governance.rs  mod.rs  node.rs  proposal.rs  training.rs  tro.rs
scripts/: deploy-devnet.sh  deploy.sh  install-solana-toolchain.ps1  install-solana-windows.ps1  setup.sh  test.sh  verify-implementation.ps1
tests/: daollm.ts
