[package]
name = "daollm-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
dotenv = "0.15"
config = "0.14"

# Solana
solana-client = "1.18"
solana-sdk = "1.18"
anchor-client = "0.29"

# IPFS
ipfs-api = "0.3"
reqwest = { version = "0.11", features = ["json"] }

# Database (optional for MVP)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID
uuid = { version = "1.6", features = ["v4", "serde", "fast-rng"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

