[package]
name = "daollm"
version = "0.1.0"
description = "DAO Proposal Analysis System - Solana Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "daollm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

